--- a/runtimes/openvino/development/Dockerfile
+++ b/runtimes/openvino/development/Dockerfile
@@ -52,6 +52,11 @@ RUN make -j $(nproc) install
 
 # Install ngraph wheel
 WORKDIR /openvino/ngraph/python
+# Below hack is needed because OpenVINO conftest.py, which sets up backand name variables,
+# is not called while running onnx backend tests.
+RUN sed -i 's/BACKEND_NAME = None/BACKEND_NAME = "CPU"/' /openvino/ngraph/python/tests/__init__.py
+RUN sed -i 's/cls.backend_name/"CPU"/' /openvino/ngraph/python/tests/test_onnx/utils/onnx_backend.py
+# End of hack
 RUN git clone --branch v2.5.0 --depth 1 https://github.com/pybind/pybind11.git
 ENV NGRAPH_CPP_BUILD_PATH=${OV_DIST_DIR}
 ENV LD_LIBRARY_PATH=${OV_DIST_DIR}/lib:${LD_LIBRARY_PATH}
